modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-flex-volumes/test_profile.yaml
apiVersion: deckhouse.io/v1alpha1
kind: ConstraintTestProfile
metadata:
  name: allowed-flex-volumes
spec:
  testDirectory: allowed-flex-volumes
  suite:
    expectedTestBlockNames:
      - security-policy
